Revision history for {{$dist->name}}

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

0.24.0 2015-07-07
  [ ENHANCEMENTS ]
    - More to DZP::Git::Contributor. (GH#4, Karen Etheridge)
    - Remove deprecated private nextVersion plugin. (GH#1-ish)

  [ STATISTICS ]
    - code churn: 5 files changed, 129 insertions(+), 284 deletions(-)

0.23.0 2015-05-28
  [ ENHANCEMENTS ]
    - Change Reporting module to Test::ReportPrereqs.

  [ STATISTICS ]
    - code churn: 3 files changed, 12 insertions(+), 4 deletions(-)

0.22.1 2015-03-18
  [ BUG FIXES ]
    - It's VerifyPhase*s*. Oops.

  [ STATISTICS ]
    - code churn: 2 files changed, 10 insertions(+), 3 deletions(-)

0.22.0 2015-02-03
  [ ENHANCEMENTS ]
    - Add VerifyPhase.
    - Add a few config params.

  [ STATISTICS ]
    - code churn: 4 files changed, 59 insertions(+), 8 deletions(-)

0.21.1 2014-11-06
  [ BUG FIXES ]
    - Remove redundance DZ::P::Homepage (it now comes from the GitHub
      plugins).

  [ STATISTICS ]
    - code churn: 3 files changed, 10 insertions(+), 6 deletions(-)

0.21.0 2014-08-31
  [ ENHANCEMENTS ]
    - Added CPANFile
    - Added DOAP
    - Switch GatherDir for Git::GatherDir
    - Now uses Dist::Zilla::Role::pluginBundle::ConfigSlicer.

  [ STATISTICS ]
    - code churn: 4 files changed, 54 insertions(+), 5 deletions(-)

0.20.0 2014-03-11
  [ ENHANCEMENTS ]
    - GitHub is now the default bug tracker.

  [ STATISTICS ]
    - code churn: 4 files changed, 20 insertions(+), 15 deletions(-)

0.19.0 2014-02-17
  [ BUG FIXES ]
    - Add a few forgotten dependencies.
    - Bump dependency for D::Z::P::Twitter.

  [ NEW FEATURES ]
    - Add 'tweet' flag.

  [ STATISTICS ]
    - code churn: 3 files changed, 59 insertions(+), 34 deletions(-)

0.18.3 2013-09-25
  [ BUG FIXES ]
    - Add 'multiple_inheritance' flag for dz::p::git::commitbuild.

  [ STATISTICS ]