@@ -23,4 +23,5 @@ share/profiles/default/skel/dist.ini
 t/00-compile.t
 t/00-report-prereqs.dd
 t/00-report-prereqs.t
+xt/release/pause-permissions.t
 xt/release/unused-vars.t
