@@ -43,6 +43,7 @@ Dist::Zilla::Plugin::MatchManifest = 0
 Dist::Zilla::Plugin::Authority = 0 
 Dist::Zilla::Plugin::ReportVersions::Tiny = 0 
 Dist::Zilla::Plugin::CheckChangesHasContent = 0 
+Dist::Zilla::Plugin::Test::PAUSE::Permissions = 0
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::YANICK = share/profiles
